# helgoboss-midi-cpp

./: .gitmodules  CMakeLists.txt  README.md  azure-pipelines.yml  vcpkg.txt
include/helgoboss-midi/: Midi14BitCcMessage.h  Midi14BitCcMessageParser.h  MidiMessage.h  MidiParameterNumberMessage.h  MidiParameterNumberMessageParser.h
src/: Midi14BitCcMessage.cpp  Midi14BitCcMessageParser.cpp  MidiMessage.cpp  MidiParameterNumberMessage.cpp  MidiParameterNumberMessageParser.cpp  midi-util.cpp  midi-util.h
test/: CMakeLists.txt  Midi14BitCcMessageParserTest.cpp  Midi14BitCcMessageTest.cpp  MidiParameterNumberMessageParserTest.cpp  MidiParameterNumberMessageTest.cpp
